memelist-generator/src/index.css
* {
  box-sizing: border-box;
}

body {
  font-family: "Karla", sans-serif;
  margin: 0;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

main {
  outline: 1px solid green;
  margin-top: 75px;
  margin-bottom: 100px;
  margin-left: 200px;
  margin-right: 200px;

}

.header {
  display: flex;
  align-items: center;
  height: 65px;
  background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
  color: white;
  padding: 20px;
  position: relative;
}

.header--image {
  height: 100%;
  margin-right: 6px;
}

.header--title {
  font-size: 1.25rem;
  margin-right: auto;
}

.header--project {
  font-size: 0.75rem;
  font-weight: 500;
}

.form {
  display: grid;
  grid-template: 40px 40px / 1fr 1fr;
  gap: 17px;
  margin-bottom: 17px;
}

.form--input {
  font-family: "Karla", sans-serif;
  border-radius: 5px;
  border: 1px solid #D5D4D8;
  text-indent: 5px;
}

.form--button {
  grid-column: 1 / -1;
  font-family: "Karla", sans-serif;
  border-radius: 5px;
  background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
  color: white;
  border: none;
  cursor: pointer;
  
}

.save-button {
  grid-column: 1 / -1;
  font-family: "Karla", sans-serif;
  border-radius: 5px;
  background: linear-gradient(90.41deg, #875f94 1.14%, #A818DA 100%);
  color: white;
  border: none;
  cursor: pointer;
  height: 40px;
}

.meme {
  position: relative;
  display: flex;
  flex-direction: column;
  margin-bottom: 40px;
  
}

.meme--image {
  display: flex;
  max-width: 100%;
  border-radius: 3px;
  align-items: center;
  flex-direction: column;
}

.meme-list-image {
  height: 350px;
  width: 400px;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 5px;
}

.meme--text {
  position: absolute;
  width: 80%;
  text-align: center;
  left: 50%;
  transform: translateX(-50%);
  margin-bottom: 30px;
  padding: 0 5px;
  font-family: impact, sans-serif;
  font-size: 2em;
  text-transform: uppercase;
  color: white;
  letter-spacing: 1px;
  text-shadow:
      2px 2px 0 #000,
      -2px -2px 0 #000,
      2px -2px 0 #000,
      -2px 2px 0 #000,
      0 2px 0 #000,
      2px 0 0 #000,
      0 -2px 0 #000,
      -2px 0 0 #000,
      2px 2px 5px #000;
}



.meme-list {
  max-width: 100%;
  border-radius: 3px;
  display: flex;
  position: relative;
  flex-direction: column;
  outline: 1px solid red;
  align-items: center;
  margin-bottom: 40px;
}

.bottom {
  bottom: 0
}

.top {
  top: 0;
}

.edit-button {
  display: inline;
  width: 50px;

}


.delete-btn {
  display: inline;
  width: 50px;
  height: 20px;

}

